--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,10 @@ h1 {
     margin-bottom: 1rem;
 }
 
+p {
+    padding: 0 2rem;
+}
+
 button {
     border-radius: 8px;
     border: 1px solid transparent;
