add color for span

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,10 @@ p {
     color: #242424;
 }
 
+span {
+    color: #242424;
+}
+
 button {
     border-radius: 8px;
     border: 1px solid transparent;
